--- a/response.tex
+++ b/response.tex
@@ -348,7 +348,7 @@ In Algorithm 3, a threshold EPS\_FLT on eigenvalues is used to prevent numerical
     We totally agree that some mathematical formulations are conventional. We believe that it is necessary to provide to readers sufficient information to explain clearly the contribution of the proposed paper. The contributions are based on specific derivation of the GMM and the FE formulation. Without these primary recall, we are afraid that readers can be lost. Concerning the contribution of the paper, they are stated in the antepenultimate paragraph of the introduction. They concern the expression of efficient updates rules using block matrix processing. Furthermore, an open source C++ library is made available for the community. The results of our experiment shows that the proposed algorithm has the advantage to be very efficient in term of processing time with a fairly reasonable cost in term of classification accuracy. It has to be noticed that compared to similar methods using Gaussian Mixture model, no additional hypothesis are made on the covariance matrix which is tractable only because of the efficient implementation.
 
     To make the contribution more clear, the antepenultimate paragraph has been modified to
-\rev{The contribution of this paper is a extension of the forward feature selection method proposed in~[27]. A smart implementation of the feature selection update rules are presented in order to perform efficiently on large amount of data. The rules use on linear algebra on block matrices applied to the covariance matrix of the conditional class density function.  Furthermore, a floating version of the algorithm is proposed and evaluated. Several \emph{correctness of fit} criteria are proposed to handle unbalanced training sets, extending the conventional \emph{overall accuracy} measure.  Finally, the developed algorithm is made available to the scientific community as a remote module of the Orfeo Toolbox~[13].
+\emph{\rev{The contribution of this paper is a extension of the forward feature selection method proposed in~[27]. A smart implementation of the feature selection update rules are presented in order to perform efficiently on large amount of data. The rules use on linear algebra on block matrices applied to the covariance matrix of the conditional class density function.  Furthermore, a floating version of the algorithm is proposed and evaluated. Several \emph{correctness of fit} criteria are proposed to handle unbalanced training sets, extending the conventional \emph{overall accuracy} measure.  Finally, the developed algorithm is made available to the scientific community as a remote module of the Orfeo Toolbox~[13].}}
   \end{resbox}
 \end{revbox}
 
